--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.1.7",
     "axios": "^1.3.2",
+    "history": "^5.3.0",
     "moment": "^2.29.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -21,6 +22,7 @@
     "react-scripts": "5.0.1",
     "showdown": "^2.1.0",
     "styled-components": "^5.3.6",
+    "vditor": "^3.9.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
